chore: fix issues with image overflowing

--- a/src/components/post-card/post-card.module.scss
+++ b/src/components/post-card/post-card.module.scss
@@ -54,6 +54,7 @@
 	border-radius: var(--card_corner-radius);
 	border: var(--card_border-width) solid var(--card_border-color);
 	background: var(--card_background-color);
+	overflow: hidden;
 }
 
 .postBase:hover {
